favicon, fixed countdown on mobile

--- a/src/css/components/countdown/countdown.css
+++ b/src/css/components/countdown/countdown.css
@@ -1,6 +1,6 @@
 .countdown {
     background-color: var(--color-black);
-    padding-bottom: 6.5rem;
+    padding-bottom: 3rem;
 
     & .page-wrapper {
         display: flex;
@@ -12,13 +12,13 @@
 
 .countdown__item {
     flex-grow: 1;
-    padding-top: 7rem;
+    padding-top: 2.5rem;
     position: relative;
 }
 
 .countdown__value {
     color: var(--color-purple-50);
-    font-size: 5.625rem;
+    font-size: 2rem;
     font-weight: 300;
     left: 50%;
     position: absolute;
@@ -28,4 +28,25 @@
 
 .countdown__label {
     color: var(--color-white);
+    font-size: 0.875rem;
+}
+
+@media screen and (--medium) {
+
+    .countdown {
+        padding-bottom: 6.5rem;
+    }
+
+    .countdown__item {
+        padding-top: 7rem;
+    }
+
+    .countdown__value {
+        font-size: 5.625rem;
+    }
+
+    .countdown__label {
+        font-size: 1rem;
+    }
+
 }
